minor: 2fa challenges for all
